--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,140 @@ header{
     transition-property:border;
     transition-duration: 0.2s;
 }
+/* form area css */
+
+.form-area{
+    display: flex;
+    align-items: center;justify-content: center;
+    background: rgba(255, 0, 0, 0.05);
+    border-radius: 16px;
+    text-align: center;
+}
+form>img{
+    padding-top: 80px;
+    padding-bottom: 40px;
+
+}
+form>h3{
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-bottom: 22px;
+}
+form>p{
+    color: rgba(7, 2, 17, 0.60);
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px; 
+}
+.email-area{
+    padding-top: 48px;
+    padding-bottom: 80px;
+}
+.email-area >input{
+    padding: 20px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border: none;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+}
+.email-area >input:focus{
+    outline-color:#3A9FEB;
+}
+.email-area button{
+    border-radius: 0px 30px 30px 0px;
+    background: #F00;
+    padding: 18px 56px;
+    border: none;
+    color: #fff;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+/* footer area css */
+footer{
+    background: #070211;
+    color: #FFF;
+    padding-left: 140px;
+    padding-top: 120px;
+padding-bottom: 120px;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 300px;
+    border-bottom-color:rgba(255, 255, 255, 0.15); ;
+    padding-right:290px ;
+}
+.footer-content>.left-side>p{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+}
+.phone{
+    display: flex;
+    align-items: center;
+}
+.phone p{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px; 
+}
+.phone img{
+margin-top: 0px;
+margin-right: 10px;
+}
+.website{
+    display: flex;
+    align-items: center;
+}
+.website p{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+    }
+.website img{
+    margin-top: 0px;
+    margin-right: 10px;
+}
+.footer-logo{
+    text-align: center;
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+.footer-logo img{
+    padding-right: 20px;
+}
+
+.copyright{
+    display: flex;
+    justify-content: space-between;
+    margin-right:290px ;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+
+}
